# diplom_11

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: deploy-main.yaml  deploy_main.yaml  push.yaml
deploy/: .env  docker-compose.yaml  nginx.conf
tests/: conftest.py  factories.py
tests/test_core/: test_categories.py  test_signup.py
tests/test_goals/: test_boards.py  test_comments.py  test_goals.py
todolist/: settings.py  urls.py
todolist/bot/: urls.py  views.py
todolist/bot/management/commands/: runbot.py
todolist/bot/migrations/: 0001_add_tg_user.py
todolist/bot/tg/: client.py
todolist/core/: admin.py  serializers.py  urls.py  views.py
todolist/core/migrations/: 0001_initial.py
todolist/goals/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
todolist/goals/migrations/: 0001_add_goals_category_model.py  0002_add_goals_model.py  0003_add_goals_comments_model.py  0004_board_goalcategory_board_boardparticipant.py  0005_create_new_objects.py  0006_alter_goalcategory_board.py
